--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=course
-spring.datasource.url=jdbc:mysql://localhost:3306/course?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3308/course?createDatabaseIfNotExist=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username=root
-spring.datasource.password=Anhnhi2004
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 server.port=8080
