--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=course
-spring.datasource.url=jdbc:mysql://localhost:3308/course?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/course?createDatabaseIfNotExist=true
 #spring.datasource.url=jdbc:mysql://coursedb.mysql.database.azure.com:3306/course?createDatabaseIfNotExist=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.username=root
 #spring.datasource.username=courseuser
-spring.datasource.password=password
+spring.datasource.password=
 #spring.datasource.password=123456aA@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
